--- a/index.html
+++ b/index.html
@@ -133,11 +133,24 @@
         <br><br><br>
         <div id="ingredients">
             <div class="organizer">
-                <div class="imageContainer">
-
+                <div style="display: inline;">
+                    <h2>Our Ingredients</h2>
+                    <br>
+                    <ul>
+                        <li>Coffee Bean</li>
+                        <li>Tea Leave</li>
+                        <li>Dried Leaves and Petals</li>
+                        <li>Indigo</li>
+                        <li>Burnt Ash</li>
+                        <li>Pomegranate</li>
+                        <li>Madder</li>
+                        <li>Turmeric</li>
+                        <li>Soapnut</li>
+                        <li>Myrobala</li>
+                    </ul>
                 </div>
-                <div>
-
+                <div class="imageContainer">
+                    <img src="/assets/ingredients.png" alt="" width="70%">
                 </div>
             </div>
         </div>
